fix some links in videos page & the comment wrapping problem

--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ p {
     padding: 2px;
     text-align: justify;
     line-height: 25px;
+    word-wrap: break-word;
 }
 
 img {
